--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,12 +69,11 @@
 				<img th:src="@{/kube12.jpg}" alt="logo" height="200">
 			</div>
 			<div class="col-md-8">
-				<h4 class="text-center">GANA TECH SOLUTIONS - Consultant,
-					Training, Development Center.</h4>
-				<h4 class="text-center">Contact @ +91-8340901901 </h4>
+				<h4 class="text-center">Rajshekar Reddii</h4>
+				<h4 class="text-center">Contact @ +61 452276439 </h4>
 				<h5 class="text-center">
-					Copyrights 2020 by <a href="http://ganatechnologies.com/">Gana
-						Technologies</a>
+					Copyrights 2020 by <a Raj
+						</a>
 				</h5>
 			</div>
 		</div>
